--- a/css.css
+++ b/css.css
@@ -23,9 +23,10 @@ body {
     "ime imeinput"
     "prezime prezimeinput"
     "vrsta vrstainput"
+    "lease leaseinput"
     "submit submit";
   grid-template-columns: 25% auto;
-  grid-template-rows: 20% auto auto auto 20%;
+  grid-template-rows: 20% auto auto auto auto 20%;
   height: 60%;
   left: 20%;
   position: relative;
@@ -105,6 +106,16 @@ form {
 
 .vrstainput {
   grid-area: vrstainput;
+  margin: auto;
+}
+
+.lease {
+  grid-area: lease;
+  margin: auto;
+}
+
+.leaseinput {
+  grid-area: leaseinput;
   margin: auto;
 }
 
