--- a/result.css
+++ b/result.css
@@ -144,23 +144,23 @@ form {
   margin: auto;
 }
 
-@media screen and (min-width: 2560px) and (min-width: 1440px) {
+@media screen and (max-width: 2560px) and (min-width: 1440px) {
   html {
     font-size: 35px;
   }
 }
 
-@media screen and (min-width: 1440px) and (min-width: 1024px) {
+@media screen and (max-width: 1440px) and (min-width: 1024px) {
   html {
     font-size: 20px;
   }
 }
-@media screen and (min-width: 1024px) and (min-width: 768px) {
+@media screen and (max-width: 1024px) and (min-width: 768px) {
   html {
     font-size: 14px;
   }
 }
-@media screen and (min-width: 768px) and (min-width: 425px) {
+@media screen and (max-width: 768px) and (min-width: 425px) {
   html {
     font-size: 14px;
   }
